# SmartBoxAnalysis

./: SmartBoxAnalysis.ipynb  data.csv  pyproject.toml
