[tool.poetry]
name = "smartboxanalysis"
version = "0.1.0"
description = ""
authors = ["j.janin-reynaud <julien.janin-reynaud@itsfactory.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

